--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Current"></activity>
+        <activity android:name=".Current" />
+        <activity android:name=".Scan" />
+
+        <provider
+            android:name=".MyContentProvider"
+            android:authorities="com.nearur.musiccafe"
+            android:enabled="true"
+            android:exported="true"></provider>
     </application>
 
 </manifest>
